--- a/PROYECTO SEMESTRAL/Modificar.html
+++ b/PROYECTO SEMESTRAL/Modificar.html
@@ -59,12 +59,17 @@
     <div class="container" class="fondo">
         <div class="row" style="margin-top: 50px;">
             <div class="col-md-12 col-sm-12">
-                <h1  >Modificar perfil</h1><br>
+                <h1  style="text-align: center;">Modificar perfil</h1><br>
                 <form action="#" method="POST" name="form1" enctype="multipart/form-data">
                     <div class="form-group" ><label class="form-label">Cambiar Nombre: </label>
-                    <input class="form-control" type="text" name="nombre" value="" placeholder="Armando" maxlength="15" minlength="3"></div>
+                    <input class="form-control" type="text" name="nombre" value="" placeholder="Armando" maxlength="15" minlength="3"></div><br>
+                    <h4 >Cambiar foto de perfil:</h4><br>
+                    <div class="form-group" >
+                        <label for="exampleFormControlFile1" >Seleccione una nueva foto de perfil</label>
+                        <input  type="file" class="form-control-file" id="exampleFormControlFile1">
+                      </div><br>
                     
-                    <h4 style="text-align: center;">Cambiar contraseña:</h4>
+                    <h4 >Cambiar contraseña:</h4><br>
                     <div class="form-group" >
                         <label class="form-label" >Contraseña nueva: </label>
                         <input required class="form-control" type="password" name="nombre" value="" placeholder="k67890" maxlength="10" minlength="5"></div>
@@ -73,7 +78,7 @@
                         <label class="form-label">Confirmar contraseña: </label>
                         <input required class="form-control" type="password" name="nombre" value="" placeholder="k67890" maxlength="10" minlength="5"></div><br>
 
-                    <h5>Para cambiar tu email tendras que escribirlo y con el enlace que te llegue podras cambiar a tu nuevo email. ¿Estas seguro de cambiarlo?</h5><br>
+                    <h5 style="text-align: center;">Para cambiar tu email tendras que escribirlo y con el enlace que te llegue podras cambiar a tu nuevo email. ¿Estas seguro de cambiarlo?</h5><br>
                     <div class="form-gruop" ><label class="form-label" >Email: </label>
                         <input required class="form-control" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com"></div><br>
 
