--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -86,6 +86,11 @@
                     <div class="form-group"><label class="form-label">Edad: </label><br>
                     <input type="number" name="edad" min="1"></div><br>
 
+                    <div class="form-group">
+                        <label for="exampleFormControlFile1">Seleccione una foto de perfil</label>
+                        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                      </div><br>
+
                     <div class="form-group" ><label class="form-label">Género: </label><br>
                     <select name="genero">
                         <option value="S" selected>Seleccione una opción</option>
