--- a/PROYECTO SEMESTRAL/Contacto.html
+++ b/PROYECTO SEMESTRAL/Contacto.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="../CSS/cambios.css"/>
+    <link type="text/css" rel="stylesheet" href="./CSS/cambios.css"/>
     
 </head>
-<body class="fondoPP">
+<body class="fondoLo">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="Pantalla.html" style="margin-left: 25px;">Inicio</a>
