--- a/PROYECTO SEMESTRAL/ver perfil.html
+++ b/PROYECTO SEMESTRAL/ver perfil.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="../CSS/cambios.css"/>
+    <link type="text/css" rel="stylesheet" href="./CSS/cambios.css"/>
     
 </head>
-<body class="fondoPP">
+<body class="fondoLo">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -80,7 +80,7 @@
 
                 <h3 >Fecha de nacimiento: 25, Agosto del 1998</h3><br>
 
-                <h3 >Foto de perfil:</h3><img src="./img/CURSOR/descarga.jpg"  alt="sin imagen" class="img"><br><br><br>
+                <h3 >Foto de perfil:</h3><img src="./img/CURSOR/descarga.jpg"  alt="sin imagen" ><br><br><br>
             </div>
             <h2 style="margin-left: 170px;">Para cambiar algun dato de tu perfil vaya a modificar perfil</h2>
         </div>
