--- a/PROYECTO SEMESTRAL/Login.html
+++ b/PROYECTO SEMESTRAL/Login.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="./CSS/cambios.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
     
 </head>
 <body class="fondoLo">
@@ -62,24 +65,24 @@
         <div class="row">
             <div class="col-md-3 col-sm-3"></div>
             <div class="col-md-6 col-sm-6" style="margin-top: 80px;">
-                <h1 style="text-align: center;">Iniciar Sesion</h1><br><br>
+                <h1 class="centrar , letraLo ">Iniciar Sesion</h1><br><br>
                 <form action="#" method="POST" name="form1" enctype="multipart/form-data">
                     <div class="form-group"  >
-                        <h4><label class="form-label">Email: </label></h4>
-                        <input required class="form-control" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com">
+                        <h4><label class="form-label , letraLo">Email: </label></h4>
+                        <input required class="form-control , letraLo" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com">
                     </div><br><br>
                     <div class="form-group"  >
-                        <h4><label class="form-label">Contraseña: </label></h4>
-                        <input required class="form-control" type="password" name="nombre" value="" placeholder="hola123">
+                        <h4><label class="form-label , letraLo">Contraseña: </label></h4>
+                        <input required class="form-control , letraLo" type="password" name="nombre" value="" placeholder="hola123">
                     </div>
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Mantener sesion iniciada</label>
+                        <label class="form-check-label , letraLo" for="exampleCheck1"><h6>Mantener sesion iniciada</h6></label>
                     </div><br>
-                    <a href="olvidado.html"><p>¿Olvidaste tu contraseña?</p></a><br>
+                    <a href="olvidado.html"><p >¿Olvidaste tu contraseña?</p></a><br>
                     
-                    <input type="submit" value="Enviar" class="btn btn-danger"  >
-                    <input type="reset" value="Limpiar" class="btn btn-danger" >
+                    <input type="submit" value="Enviar" class="btn btn-danger "  >
+                    <input type="reset" value="Limpiar" class="btn btn-danger " >
                 </form>
             </div>
             <div class="col-md-3 col-sm-3"></div>
