--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="./CSS/cambios.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
     
 </head>
 <body class="fondoLo">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <h3>GameTopia</h3>
+        <h3 >GameTopia</h3>
         <a class="navbar-brand" href="Pantalla.html" style="margin-left: 25px;">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -59,44 +62,44 @@
     <div class="container" class="fondo">
         <div class="row" style="margin-top: 50px;">
             <div class="col-md-12 col-sm-12">
-                <h1  >Regístrate</h1><br>
+                <h1 class="centrar , letraLo" >Regístrate</h1><br>
                 <form action="#" method="POST" name="form1" enctype="multipart/form-data">
-                    <div class="form-group" ><label class="form-label">Nombre: </label>
-                    <input class="form-control" type="text" name="nombre" value="" placeholder="Alvaro" maxlength="15" minlength="3"></div>
+                    <div class="form-group" ><label class="form-label , letraLo"><h4>Nombre:</h4> </label>
+                    <input class="form-control , letraLo" type="text" name="nombre" value="" placeholder="Alvaro" maxlength="15" minlength="3"></div>
                     
-                    <div class="form-group" ><label class="form-label">Apellido: </label>
-                        <input class="form-control" type="text" name="nombre" value="" placeholder="Hernandez" maxlength="15" minlength="3"></div>
+                    <div class="form-group" ><label class="form-label , letraLo"><h4>Apellido: </h4></label>
+                        <input class="form-control , letraLo" type="text" name="nombre" value="" placeholder="Hernandez" maxlength="15" minlength="3"></div>
 
                     <div class="form-group" >
-                        <label class="form-label" >Contraseña: </label>
-                        <input required class="form-control" type="password" name="nombre" value="" placeholder="12345" maxlength="10" minlength="5"></div>
+                        <label class="form-label , letraLo" ><h4>Contraseña:</h4> </label>
+                        <input required class="form-control , letraLo" type="password" name="nombre" value="" placeholder="12345" maxlength="10" minlength="5"></div>
 
                     <div class="form-group" >
-                        <label class="form-label">Confirmar contraseña: </label>
-                        <input required class="form-control" type="password" name="nombre" value="" placeholder="12345" maxlength="10" minlength="5"></div>
+                        <label class="form-label , letraLo"><h4>Confirmar contraseña:</h4> </label>
+                        <input required class="form-control , letraLo" type="password" name="nombre" value="" placeholder="12345" maxlength="10" minlength="5"></div>
 
-                    <div class="form-gruop" ><label class="form-label" >Email: </label>
-                        <input required class="form-control" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com"></div><br>
-                    <div class="form-gruop" ><label class="form-label" >Telefono movil: </label>
-                        <input required class="form-control" type="text" name="nombre" value="" placeholder="912345678" maxlength="11" minlength="9"></div><br>
+                    <div class="form-gruop" ><label class="form-label , letraLo" ><h4>Email:</h4> </label>
+                        <input required class="form-control , letraLo" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com"></div><br>
+                    <div class="form-gruop" ><label class="form-label , letraLo" ><h4>Telefono movil:</h4> </label>
+                        <input required class="form-control , letraLo" type="text" name="nombre" value="" placeholder="912345678" maxlength="11" minlength="9"></div><br>
 
-                    <div class="form-group"><label class="form-label" >Fecha de Nacimiento: </label><br>
+                    <div class="form-group"><label class="form-label , letraLo" ><h4>Fecha de Nacimiento:</h4> </label><br>
                     <input  type="date" name="f_nac"></div><br>
 
-                    <div class="form-group"><label class="form-label">Edad: </label><br>
+                    <div class="form-group"><label class="form-label , letraLo"><h4>Edad:</h4> </label><br>
                     <input type="number" name="edad" min="1"></div><br>
 
                     <div class="form-group">
-                        <label for="exampleFormControlFile1">Seleccione una foto de perfil</label>
-                        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                        <label for="exampleFormControlFile1" class="letraLo"><h4>Seleccione una foto de perfil</h4></label>
+                        <h5><input type="file" class="form-control-file , letraLo" id="exampleFormControlFile1"></h5>
                       </div><br>
 
-                    <div class="form-group" ><label class="form-label">Género: </label><br>
-                    <select name="genero">
+                    <div class="form-group" ><label class="form-label , letraLo"><h4>Género:</h4> </label><br>
+                    <h5 class="letraLo"><select name="genero">
                         <option value="S" selected>Seleccione una opción</option>
                         <option value="F">Femenino</option>
                         <option value="M" >Masculino</option>
-                        <option value="O">Otro</option>
+                        <option value="O">Otro</option></h5>
                     </select></div><br>
 
                     <div><input type="submit" value="Enviar" class="btn btn-danger" style="margin-right: 50px;"><input type="reset" value="Limpiar" class="btn btn-danger" ></div><br><br>
