--- a/PROYECTO SEMESTRAL/olvidado.html
+++ b/PROYECTO SEMESTRAL/olvidado.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="./CSS/cambios.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
     
 </head>
 <body class="fondoLo">
@@ -60,13 +63,13 @@
         <div class="row">
             <div class="col-md-3 col-sm-3"></div>
             <div class="col-md-6 col-sm-6" style="margin-top: 80px;">
-                <h1 style="text-align: center;">Olvidaste tu contraseña</h1><br><br>
+                <h1 class="centrar , letraLo">Olvidaste tu contraseña</h1><br><br>
                 <form action="#" method="POST" name="form1" enctype="multipart/form-data">
                     <div class="form-group"  >
-                        <h4><label class="form-label">Escribe tu correo o telefono movil: </label></h4>
-                        <input required class="form-control" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com o 9123456789">
+                        <h4><label class="form-label , letraLo">Escribe tu correo o telefono movil: </label></h4>
+                        <input required class="form-control , letraLo" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com o 9123456789">
                     </div><br>
-                    <div><h4 style="text-align: center;">Le llegara un Correo o un SMS a su respectivo dispositivo</h4></div><br>
+                    <div><h4 class="centrar , letraLo">Le llegara un Correo o un SMS a su respectivo dispositivo</h4></div><br>
                     <input type="submit" value="Enviar" class="btn btn-danger" style="margin-left:400px; ">
                     
 
