--- a/PROYECTO SEMESTRAL/Contacto.html
+++ b/PROYECTO SEMESTRAL/Contacto.html
@@ -61,10 +61,11 @@
             <div class="col-md-6 col-sm-12">
                 <br><br><br><br><br><br><div class="card ">
                     <img src="./img/CURSOR/jony.jpg" alt="John" style="width:100%">
-                    <h2>Jonathan Riveros</h2>
-                    <p class="title">Creador y fundador de GameTopia</p>
-                    <p>Harvard University</p>
-                    <div style="margin: 24px 0;">
+                    <h2 class="letraLo">Jonathan Riveros</h2>
+                    <p class="title , letraLo">Creador y fundador de GameTopia</p>
+                    <h5 class="letraLo"><p>Harvard University</p></h5>
+                    <h5 class="letraLo"><p>Analista Programador Computacional</p></h5>
+                    <div style="margin: 5px 0;">
                       <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a> 
                       <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>  
                       <a href="https://cl.linkedin.com/"><i class="fa fa-linkedin"></i></a>  
@@ -76,10 +77,11 @@
             <div class="col-md-6 col-sm-12">
                 <br><br><br><br><br><br><div class="card ">
                     <img src="./img/CURSOR/joao.jpg" alt="John" style="width:100%">
-                    <h2>Joao Lisboa</h2>
-                    <p class="title">Creador y fundador de GameTopia</p>
-                    <p>Stanford University</p>
-                    <div style="margin: 24px 0;">
+                    <h2 class="letraLo">Joao Lisboa</h2>
+                    <p class="title , letraLo">Creador y fundador de GameTopia</p>
+                    <h5><p class="letraLo">Stanford University</p></h5>
+                    <h5 class="letraLo"><p>Analista Programador Computacional</p></h5>
+                    <div style="margin: 5px 0;">
                       <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a> 
                       <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>  
                       <a href="https://cl.linkedin.com/"><i class="fa fa-linkedin"></i></a>  
