--- a/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
 </head>
-<body class="fondoPC">
+<body class="fondoPC , cuPC">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -60,7 +60,7 @@
           </form>
         </div>
       </nav></div>
-      
+
     <div class="container">
         <br>
         
