--- a/PROYECTO SEMESTRAL/Contacto.html
+++ b/PROYECTO SEMESTRAL/Contacto.html
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <br><br><br><br><br><br><div class="card ">
-                    <img src="./img/CURSOR/jony.jpg" alt="John" style="width:100%">
+                    <img src="./img/Perfiles/jony.jpg" alt="John" style="width:100%">
                     <h2 class="letraLo">Jonathan Riveros</h2>
                     <p class="title , letraLo">Creador y fundador de GameTopia</p>
                     <h5 class="letraLo"><p>Harvard University</p></h5>
@@ -76,7 +76,7 @@
             </div>
             <div class="col-md-6 col-sm-12">
                 <br><br><br><br><br><br><div class="card ">
-                    <img src="./img/CURSOR/joao.jpg" alt="John" style="width:100%">
+                    <img src="./img/Perfiles/joao.jpg" alt="John" style="width:100%">
                     <h2 class="letraLo">Joao Lisboa</h2>
                     <p class="title , letraLo">Creador y fundador de GameTopia</p>
                     <h5><p class="letraLo">Stanford University</p></h5>
