--- a/PROYECTO SEMESTRAL/ver perfil.html
+++ b/PROYECTO SEMESTRAL/ver perfil.html
@@ -70,7 +70,7 @@
                 <br><br><br><br><br><div class="flip-card" style="margin-left: 320px;">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="./img/CURSOR/alvaro.jpg" alt="Avatar" style="width:300px;height:300px;">
+                        <img src="./img/Perfiles/alvaro.jpg" alt="Avatar" style="width:300px;height:300px;">
                       </div>
                       <div class="flip-card-back">
                         <br><h4 class="letraLo">Alvaro Hernandez</h4> 
