--- a/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
@@ -27,16 +27,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="../Exclusivo Play/playstation.html">PlayStation <span class="sr-only">(current)</span></a>
+              <a class="nav-link , cuP1"  href="../Exclusivo Play/playstation.html">PlayStation <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="../Exclusivo Xbox/xbox.html">Xbox</a>
+              <a class="nav-link , cuX1" href="../Exclusivo Xbox/xbox.html">Xbox</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link disabled" href="../Exclusivo Nintendo/nintendo.html">Nintendo</a>
+                <a class="nav-link disabled , cuN1" href="../Exclusivo Nintendo/nintendo.html">Nintendo</a>
               </li>
             <li class="nav-item active">
-                <a class="nav-link disabled" href="../Exclusivo PC/pc.html">PC</a>
+                <a class="nav-link disabled , cuPC1"  href="../Exclusivo PC/pc.html">PC</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link disabled" href="../Contacto.html">Contactanos</a>
@@ -69,31 +69,31 @@
         </div><br><br>
         
         <div class="row"><br><br>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/BLACK MESA.html" ><img src="../img/PC/Black Mesa.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">BLACK MESA</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/BATTLE TECH.html" ><img src="../img/PC/BattleTech.png"  alt="sin imagen" class="img"><br><p class="letraPC">BATTLE TECH</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/COUNTER STRIKE.html" ><img src="../img/PC/counter strike.webp"  alt="sin imagen" class="img"><br><p class="letraPC">CS:GO</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/CRUSADER KINGS.html" ><img src="../img/PC/Crusader Kings III.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">CRUSADER KINGS</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuPC1" href="../Exclusivo PC/BLACK MESA.html" ><img src="../img/PC/Black Mesa.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">BLACK MESA</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/BATTLE TECH.html" ><img src="../img/PC/BattleTech.png"  alt="sin imagen" class="img"><br><p class="letraPC">BATTLE TECH</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/COUNTER STRIKE.html" ><img src="../img/PC/counter strike.webp"  alt="sin imagen" class="img"><br><p class="letraPC">CS:GO</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/CRUSADER KINGS.html" ><img src="../img/PC/Crusader Kings III.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">CRUSADER KINGS</p></a></div>
         </div><br><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/TEAM FOREST.html" ><img src="../img/PC/team forest.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">TEAM FOREST 2</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/PALADINS.html" ><img src="../img/PC/paladins.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">PALADINS</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/WARFACE.html" ><img src="../img/PC/warface.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">WARFACE</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/HALF-LIFE ALYX.html" ><img src="../img/PC/Half-Life Alyx.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">HALF-LIFE ALYX</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/TEAM FOREST.html" ><img src="../img/PC/team forest.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">TEAM FOREST 2</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/PALADINS.html" ><img src="../img/PC/paladins.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">PALADINS</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/WARFACE.html" ><img src="../img/PC/warface.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">WARFACE</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/HALF-LIFE ALYX.html" ><img src="../img/PC/Half-Life Alyx.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">HALF-LIFE ALYX</p></a></div>
         </div> <br><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/DEVOUR.html" ><img src="../img/PC/devour.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">DEVOUR</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/DOTA 2.html" ><img src="../img/PC/Dota 2.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">DOTA 2</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/ESCAPE FROM TARKOV.html" ><img src="../img/PC/Escape from Tarkov.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">ESCAPE FROM TARKOV</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/EUROPA UNIVERSALIS.html" ><img src="../img/PC/Europa Universalis IV.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">EUROPA UNIVERSALIS</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/DEVOUR.html" ><img src="../img/PC/devour.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">DEVOUR</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/DOTA 2.html" ><img src="../img/PC/Dota 2.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">DOTA 2</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/ESCAPE FROM TARKOV.html" ><img src="../img/PC/Escape from Tarkov.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">ESCAPE FROM TARKOV</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/EUROPA UNIVERSALIS.html" ><img src="../img/PC/Europa Universalis IV.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">EUROPA UNIVERSALIS</p></a></div>
         </div><br><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/EVE.html" ><img src="../img/PC/EVE Online.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">EVE</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/H1Z1.html" ><img src="../img/PC/h1z1.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">H1Z1</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/PACIFY.html" ><img src="../img/PC/pacify.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">PACIFY</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/LEAGUE OF LEGENDS.html" ><img src="../img/PC/LEAGUE OF LEGENDS.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">LEAGUE OF LEGENDS</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/EVE.html" ><img src="../img/PC/EVE Online.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">EVE</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/H1Z1.html" ><img src="../img/PC/h1z1.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">H1Z1</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/PACIFY.html" ><img src="../img/PC/pacify.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">PACIFY</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/LEAGUE OF LEGENDS.html" ><img src="../img/PC/LEAGUE OF LEGENDS.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">LEAGUE OF LEGENDS</p></a></div>
         </div><br><br>
 
         
