--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
@@ -28,16 +28,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="../Exclusivo Play/playstation.html">PlayStation <span class="sr-only">(current)</span></a>
+              <a class="nav-link , cuP1"  href="../Exclusivo Play/playstation.html">PlayStation <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link"  href="../Exclusivo Xbox/xbox.html">Xbox</a>
+              <a class="nav-link , cuX1"  href="../Exclusivo Xbox/xbox.html">Xbox</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link disabled" href="../Exclusivo Nintendo/nintendo.html">Nintendo</a>
+                <a class="nav-link disabled , cuN1" href="../Exclusivo Nintendo/nintendo.html">Nintendo</a>
               </li>
             <li class="nav-item active">
-                <a class="nav-link disabled" href="../Exclusivo PC/pc.html">PC</a>
+                <a class="nav-link disabled , cuPC1" href="../Exclusivo PC/pc.html">PC</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link disabled" href="../Contacto.html">Contactanos</a>
