--- a/PROYECTO SEMESTRAL/Contacto.html
+++ b/PROYECTO SEMESTRAL/Contacto.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="./CSS/cambios.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
     
 </head>
-<body class="fondoLo">
+<body class="fondoLo , cu">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
-        <a class="navbar-brand" href="Pantalla.html" style="margin-left: 25px;">Inicio</a>
+        <a class="navbar-brand" href="Pantalla.html"  style="margin-left: 25px;" >Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,36 +25,36 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="./Exclusivo Play/playstation.html">PlayStation <span class="sr-only">(current)</span></a>
+              <a class="nav-link , cuP1" href="./Exclusivo Play/playstation.html">PlayStation <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="./Exclusivo Xbox/xbox.html">Xbox</a>
+              <a class="nav-link , cuX1" href="./Exclusivo Xbox/xbox.html">Xbox</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link disabled" href="./Exclusivo Nintendo/nintendo.html">Nintendo</a>
+                <a class="nav-link disabled , cuN1" href="./Exclusivo Nintendo/nintendo.html">Nintendo</a>
               </li>
             <li class="nav-item active">
-                <a class="nav-link disabled" href="./Exclusivo PC/pc.html">PC</a>
+                <a class="nav-link disabled , cuPC1" href="./Exclusivo PC/pc.html">PC</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link disabled" href="Contacto.html">Contactanos</a>
+                <a class="nav-link disabled , cu1" href="Contacto.html">Contactanos</a>
             </li>
-            <li class="nav-item dropdown active">
-              <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown active , cu1">
+              <a class="nav-link dropdown-toggle , cu1"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Seleccione
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="Login.html">Iniciar Sesion</a>
-                <a class="dropdown-item" href="Registrarse.html">Registrarse</a>
-                <a class="dropdown-item" href="ver perfil.html">Ver perfil</a>
-                <a class="dropdown-item" href="Modificar.html">Modificar Perfil</a>
+              <div class="dropdown-menu , cu1" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item , cu1" href="Login.html">Iniciar Sesion</a>
+                <a class="dropdown-item , cu1" href="Registrarse.html">Registrarse</a>
+                <a class="dropdown-item , cu1" href="ver perfil.html">Ver perfil</a>
+                <a class="dropdown-item , cu1" href="Modificar.html">Modificar Perfil</a>
               </div>
             </li>
             
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Buscar..." aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><img src="./img/CURSOR/lupa.png"  alt="sin imagen" class="img"></button>
+          <form class="form-inline my-2 my-lg-0 , cu1">
+            <input class="form-control mr-sm-2 , cu1" type="search" placeholder="Buscar..." aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0 , cu1" type="submit"><img src="./img/CURSOR/lupa.png"  alt="sin imagen" class="img"></button>
           </form>
         </div>
       </nav></div>
@@ -59,19 +62,19 @@
     <div class="container" class="fondo">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <br><br><br><br><br><br><div class="card ">
+                <br><br><br><br><br><br><div class="card ,cu1 ">
                     <img src="./img/Perfiles/jony.jpg" alt="John" style="width:100%">
                     <h2 class="letraLo">Jonathan Riveros</h2>
                     <p class="title , letraLo">Creador y fundador de GameTopia</p>
                     <h5 class="letraLo"><p>Harvard University</p></h5>
                     <h5 class="letraLo"><p>Analista Programador Computacional</p></h5>
                     <div style="margin: 5px 0;">
-                      <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a> 
-                      <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>  
-                      <a href="https://cl.linkedin.com/"><i class="fa fa-linkedin"></i></a>  
-                      <a href="https://es-la.facebook.com/"><i class="fa fa-facebook"></i></a> 
+                      <a class="cu1" href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a> 
+                      <a class="cu1" href="https://twitter.com/"><i class="fa fa-twitter"></i></a>  
+                      <a class="cu1" href="https://cl.linkedin.com/"><i class="fa fa-linkedin"></i></a>  
+                      <a class="cu1" href="https://es-la.facebook.com/"><i class="fa fa-facebook"></i></a> 
                     </div>
-                    <p><input type="submit" value="Contactanos" class="btn btn-danger "  ></p>
+                    <p><input type="submit" value="Contactanos" class="btn btn-danger , cu1"  ></p>
                   </div>
             </div>
             <div class="col-md-6 col-sm-12">
@@ -82,12 +85,12 @@
                     <h5><p class="letraLo">Stanford University</p></h5>
                     <h5 class="letraLo"><p>Analista Programador Computacional</p></h5>
                     <div style="margin: 5px 0;">
-                      <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a> 
-                      <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>  
-                      <a href="https://cl.linkedin.com/"><i class="fa fa-linkedin"></i></a>  
-                      <a href="https://es-la.facebook.com/"><i class="fa fa-facebook"></i></a> 
+                      <a class="cu1" href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a> 
+                      <a class="cu1" href="https://twitter.com/"><i class="fa fa-twitter"></i></a>  
+                      <a class="cu1" href="https://cl.linkedin.com/"><i class="fa fa-linkedin"></i></a>  
+                      <a class="cu1" href="https://es-la.facebook.com/"><i class="fa fa-facebook"></i></a> 
                     </div>
-                    <p><input type="submit" value="Contactanos" class="btn btn-danger "  ></p>
+                    <p><input type="submit" value="Contactanos" class="btn btn-danger , cu1"  ></p>
                   </div>
             </div>
         </div>
