termine los login

--- a/PROYECTO SEMESTRAL/Modificar.html
+++ b/PROYECTO SEMESTRAL/Modificar.html
@@ -62,28 +62,28 @@
     <div class="container" class="fondo">
         <div class="row" style="margin-top: 50px;">
             <div class="col-md-12 col-sm-12">
-                <h1  class="centrar , letraLo">Modificar perfil</h1><br>
+                <h1  class="centrar , letraLo , cu">Modificar perfil</h1><br>
                 <form action="#" method="POST" name="form1" enctype="multipart/form-data">
-                    <div class="form-group" ><label class="form-label"><h4 class="letraLo">Cambiar Nombre: </h4></label>
-                    <input class="form-control" type="text" name="nombre" value="" placeholder="Armando" maxlength="15" minlength="3"></div><br>
-                    <h4 class="letraLo">Cambiar foto de perfil:</h4><br>
-                    <div class="form-group" >
-                        <label for="exampleFormControlFile1" ><h5 class="letraLo">Seleccione una nueva foto de perfil</h5></label>
-                        <input  type="file" class="form-control-file , letraLo" id="exampleFormControlFile1">
+                    <div class="form-group" ><label class="form-label"><h4 class="letraLo , cu">Cambiar Nombre: </h4></label>
+                    <input class="form-control , cu1" type="text" name="nombre" value="" placeholder="Armando" maxlength="15" minlength="3"></div><br>
+                    <h4 class="letraLo , cu">Cambiar foto de perfil:</h4><br>
+                    <div class="form-group , cu1" >
+                        <label for="exampleFormControlFile1" ><h5 class="letraLo , cu">Seleccione una nueva foto de perfil</h5></label>
+                        <input  type="file" class="form-control-file , letraLo , cu1" id="exampleFormControlFile1">
                       </div><br>
                     
-                    <h4 class="letraLo">Cambiar contraseña:</h4><br>
+                    <h4 class="letraLo , cu">Cambiar contraseña:</h4><br>
                     <div class="form-group" >
-                        <label class="form-label , letraLo" ><h5>Contraseña nueva:</h5> </label>
-                        <input required class="form-control , letraLo" type="password" name="nombre" value="" placeholder="k67890" maxlength="10" minlength="5"></div>
+                        <label class="form-label , letraLo , cu" ><h5>Contraseña nueva:</h5> </label>
+                        <input required class="form-control , letraLo , cu1" type="password" name="nombre" value="" placeholder="k67890" maxlength="10" minlength="5"></div>
 
                     <div class="form-group" >
-                        <label class="form-label , letraLo"><h5>Confirmar contraseña: </h5></label>
-                        <input required class="form-control , letraLo" type="password" name="nombre" value="" placeholder="k67890" maxlength="10" minlength="5"></div><br>
+                        <label class="form-label , letraLo , cu"><h5>Confirmar contraseña: </h5></label>
+                        <input required class="form-control , letraLo , cu1" type="password" name="nombre" value="" placeholder="k67890" maxlength="10" minlength="5"></div><br>
 
-                    <h5 class="centrar , letraLo">Para cambiar tu email tendras que escribirlo y con el enlace que te llegue podras cambiar a tu nuevo email. ¿Estas seguro de cambiarlo?</h5><br>
-                    <div class="form-gruop" ><label class="form-label" ><h5 class="letraLo">Email: </h5></label>
-                        <input required class="form-control , letraLo" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com"></div><br>
+                    <h5 class="centrar , letraLo , cu">Para cambiar tu email tendras que escribirlo y con el enlace que te llegue podras cambiar a tu nuevo email. ¿Estas seguro de cambiarlo?</h5><br>
+                    <div class="form-gruop" ><label class="form-label" ><h5 class="letraLo , cu">Email: </h5></label>
+                        <input required class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com"></div><br>
 
                     <div><input type="submit" value="Enviar" class="btn btn-danger" style="margin-right: 50px;"><input type="reset" value="Limpiar" class="btn btn-danger" ></div><br><br>
                     
