--- a/PROYECTO SEMESTRAL/Login.html
+++ b/PROYECTO SEMESTRAL/Login.html
@@ -65,18 +65,18 @@
         <div class="row">
             <div class="col-md-3 col-sm-3"></div>
             <div class="col-md-6 col-sm-6" style="margin-top: 80px;">
-                <h1 class="centrar , letraLo , cu1">Iniciar Sesion</h1><br><br>
+                <h1 class="centrar , letraLo ">Iniciar Sesion</h1><br><br>
                 <form action="#" method="POST" name="form1" enctype="multipart/form-data">
                     <div class="form-group , cu1"  >
-                        <h4><label class="form-label , letraLo , cu1">Email: </label></h4>
+                        <h4><label class="form-label , letraLo , cu">Email: </label></h4>
                         <input required class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com">
                     </div><br><br>
                     <div class="form-group , cu1"  >
-                        <h4><label class="form-label , letraLo , cu1">Contraseña: </label></h4>
+                        <h4><label class="form-label , letraLo , cu">Contraseña: </label></h4>
                         <input required class="form-control , letraLo , cu1" type="password" name="nombre" value="" placeholder="hola123">
                     </div>
                     <div class="form-check , cu1">
-                        <input type="checkbox" class="form-check-input, cu1" id="exampleCheck1">
+                        <input type="checkbox" class="form-check-input , cu1" id="exampleCheck1">
                         <label class="form-check-label , letraLo , cu1" for="exampleCheck1"><h6>Mantener sesion iniciada</h6></label>
                     </div><br>
                     <a class="cu1" href="olvidado.html"><p >¿Olvidaste tu contraseña?</p></a><br>
