--- a/PROYECTO SEMESTRAL/olvidado.html
+++ b/PROYECTO SEMESTRAL/olvidado.html
@@ -63,13 +63,13 @@
         <div class="row">
             <div class="col-md-3 col-sm-3"></div>
             <div class="col-md-6 col-sm-6" style="margin-top: 80px;">
-                <h1 class="centrar , letraLo">Olvidaste tu contraseña</h1><br><br>
+                <h1 class="centrar , letraLo , cu">Olvidaste tu contraseña</h1><br><br>
                 <form action="#" method="POST" name="form1" enctype="multipart/form-data">
                     <div class="form-group"  >
-                        <h4><label class="form-label , letraLo">Escribe tu correo o telefono movil: </label></h4>
-                        <input required class="form-control , letraLo" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com o 9123456789">
+                        <h4><label class="form-label , letraLo , cu">Escribe tu correo o telefono movil: </label></h4>
+                        <input required class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com o 9123456789">
                     </div><br>
-                    <div><h4 class="centrar , letraLo">Le llegara un Correo o un SMS a su respectivo dispositivo</h4></div><br>
+                    <div><h4 class="centrar , letraLo , cu">Le llegara un Correo o un SMS a su respectivo dispositivo</h4></div><br>
                     <input type="submit" value="Enviar" class="btn btn-danger" style="margin-left:400px; ">
                     
 
