--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/ARMS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/ARMS.html
@@ -86,6 +86,14 @@
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
         </div>
+        <br><br><br><div class="row">
+            <div class="col"><form action="/action_page.php">
+                <textarea class="cu1" name="message" rows="5" cols="140"></textarea>
+                
+                <input type="submit" value="Enviar" class="btn btn-danger , cu1"  >
+              </form><br><br><br><br>
+            </div>
+        </div>
 
 
 
