--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/MORTAL KOMBAT 11.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/MORTAL KOMBAT 11.html
@@ -89,6 +89,14 @@
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
         </div>
+        <br><br><br><div class="row">
+            <div class="col"><form action="/action_page.php">
+                <textarea class="cu1" name="message" rows="5" cols="140"></textarea>
+                
+                <input type="submit" value="Enviar" class="btn btn-danger , cu1"  >
+              </form><br><br><br><br>
+            </div>
+        </div>
 
 
 
