fondos y fonts de los video juegos

--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html
@@ -9,8 +9,11 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="../CSS/cambios.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="fondoVJ">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -61,11 +64,11 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/animal-crossing.jpg" alt="sin imagen"><H3>ANIMAL CROSSING</H3>
+            <img class="img" src="../img/NINTENDO/animal-crossing.jpg" alt="sin imagen"><H3 class="letraVJ">ANIMAL CROSSING</H3>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
-            <p>Animal Crossing es un videojuego de simulación social y de vida que Nintendo ha descrito como un «juego de comunicación».
+            <h2 class="centrar , letraVJ">Descripcion</h2><br>
+            <p class="centrar , letraVJ">Animal Crossing es un videojuego de simulación social y de vida que Nintendo ha descrito como un «juego de comunicación».
                  El personaje vive una vida en la que el usuario decide qué hacer, como cumplir las tareas propuestas por los vecinos (que no son obligatorias). 
                  Los jugadores asumen el rol de un nuevo vecino que se acaba de mudar al pueblo. El género y la cara del personaje depende de las respuestas que se le den a las preguntas de un gato llamado Fran, el cual nos encontramos en el tren en el que el personaje viaja al pueblo.</p>
             </div></div>
@@ -73,15 +76,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° Nintendo Switch </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p clasS="letraVJ">° Nintendo Switch </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 clasS="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=5YPxiTLMcdg" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar , letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.nintendo.com/es-cl/store/products/animal-crossing-new-horizons-switch/" target="_blank">
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
