--- a/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
@@ -93,7 +93,7 @@
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar" >Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/637090/BATTLETECH/?l=spanish&cc=PT" target="_blank">
-                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                    <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/battletech-steam-key-global-i10000149680001" target="_blank">
                 <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.eneba.com/latam/steam-battletech-steam-key-global" target="_blank">
