--- a/PROYECTO SEMESTRAL/Exclusivo PC/BLACK MESA.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/BLACK MESA.html
@@ -92,7 +92,7 @@
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/362890/Black_Mesa/?l=spanish" target="_blank">
-                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                    <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/black-mesa-steam-key-global-i10000006953007" target="_blank">
                     <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.eneba.com/latam/steam-black-mesa-steam-key-global" target="_blank">
