--- a/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
@@ -94,7 +94,7 @@
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/444090/Paladins/?l=spanish" target="_blank">
-                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                    <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/paladins-crystals-key-global-200-crystals-i10000030144007" target="_blank">
                 <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
             </div>
