--- a/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
@@ -94,7 +94,7 @@
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/?l=spanish" target="_blank">
-                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                    <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/counter-strike-global-offensive-prime-status-upgrade-steam-key-global-i10000016291021" target="_blank">
                 <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.eneba.com/es/steam-counter-strike-global-offensive-steam-key-europe" target="_blank">
