--- a/PROYECTO SEMESTRAL/Exclusivo PC/DEVOUR.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/DEVOUR.html
@@ -90,7 +90,7 @@
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/1274570/DEVOUR/?l=latam" target="_blank">
-                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                    <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/devour-pc-steam-gift-global-i10000236708005" target="_blank">
                 <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.eneba.com/latam/steam-devour-steam-key-global" target="_blank">
