--- a/PROYECTO SEMESTRAL/Exclusivo PC/EVE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/EVE.html
@@ -97,7 +97,7 @@
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/8500/EVE_Online/?l=spanish" target="_blank">
-                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                    <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
         <br><br><br><div class="row">
