--- a/PROYECTO SEMESTRAL/Exclusivo PC/HALF-LIFE ALYX.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/HALF-LIFE ALYX.html
@@ -94,7 +94,7 @@
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/546560/HalfLife_Alyx/?l=spanish" target="_blank">
-                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                    <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/half-life-alyx-pc-steam-account-global-i10000192575006" target="_blank">
                 <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
             </div>
