--- a/PROYECTO SEMESTRAL/Exclusivo PC/LEAGUE OF LEGENDS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/LEAGUE OF LEGENDS.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>League of Legends (también conocido por sus siglas LoL), es un videojuego multijugador de arena de batalla en 
+            <p class="centrar">League of Legends (también conocido por sus siglas LoL), es un videojuego multijugador de arena de batalla en 
                 línea desarrollado y publicado por Riot Games. Inspirándose en Defense of the Ancients, un mapa personalizado
                  para Warcraft III, los fundadores de Riot buscaron desarrollar un juego independiente del mismo género. Desde
                   su lanzamiento en octubre de 2009, LoL ha sido un juego gratuito y se monetiza a través de la compra de elementos 
@@ -96,7 +96,7 @@
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.leagueoflegends.com/es-es/" target="_blank">
-                    <img src="../img/PC/logoLol.jpg" alt="Juego PC" class="logoY"></a></p>
+                    <img src="../img/PC/logoLol.png"  alt="Juego PC" class="logoY"></a></p>
                 
             </div>
         </div>
