--- a/PROYECTO SEMESTRAL/Exclusivo PC/PACIFY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/PACIFY.html
@@ -94,7 +94,7 @@
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/967050/Pacify/?l=spanish" target="_blank">
-                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                    <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/pacify-steam-key-global-i10000183117001" target="_blank">
                 <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.eneba.com/latam/steam-pacify" target="_blank">
